--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div id="header">
-            <p> Esto es un curso de Javascript en <strong>CoderHouse</strong>, gracias!</p>
+            <p id="myParrafo"> Esto es un curso de Javascript en <strong>CoderHouse</strong>, gracias!</p>
         </div>
         <p class="MyP"> Esto es otro elemento </p>
 
@@ -27,6 +27,12 @@
             <button type="submit" onclick="myFunction()">Submmit</button>
         </form>
 
-        <script src="codigo_001.js" async defer></script>
+        <div id="contenedor">
+            <div id="miSegundoContenedor">
+                
+            </div>
+        </div>
+
+        <script src="codigo_002.js" async defer></script>
     </body>
 </html>
